style: fix for high contrast

--- a/src/components/sbb-form-field/sbb-form-field.scss
+++ b/src/components/sbb-form-field/sbb-form-field.scss
@@ -58,6 +58,7 @@
     --sbb-form-field-label-color: GrayText;
     --sbb-form-field-prefix-color: GrayText;
     --sbb-form-field-text-color: GrayText;
+    --sbb-form-field-border-color: GrayText;
   }
 }
 
